# fastpi-with-django-orm

./: .gitignore  Makefile  README.md  env-sample.ini  pyproject.toml  sample.env
apps/: helpers.py
apps/core/: admin.py  controllers.py  models.py  schemas.py  services.py  urls.py
apps/core/migrations/: 0001_initial.py
conf/: asgi.py  settings.py  urls.py
conf/gateways/: asgi.py  fastapi.py  wsgi.py
conf/settings/: __init__.py  base.py  development.py  test.py  testing.py
shared/: env.py  exceptions.py  models.py  types.py  utils.py
src/app/: exceptions.py
src/app/ports/inbound/repository/: products.py
src/app/ports/outbound/: db.py
src/app/ports/outbound/repository/: __init__.py  products.py
src/app/services/: misc.py  product.py
src/domain/: models.py
src/domain/_core/: admin.py  apps.py
src/domain/_core/migrations/: 0001_initial.py  0002_alter_product_name.py  0003_alter_product_name.py  0004_alter_product_options.py
src/domain/_core/models/: base.py  products.py
src/domain/models/: __init__.py  apps.py
src/domain/models/migrations/: 0001_initial.py
src/domain/models/models/: products.py
src/domain/schemas/: __init__.py  products.py
src/domain/serializers/: __init__.py  base.py  product.py
src/infra/: db.py
src/infra/repository/: __init__.py  products.py
src/presentation/api/http/: asgi.py  exception_handlers.py  routers.py  utils.py
src/presentation/api/http/controllers/: __init__.py  misc.py  products.py
src/presentation/api/http/middleware/: __init__.py  allowed_hosts.py  cors.py
tests/: conftest.py
tests/apps/core/: test_controllers.py
