[tool.poetry]
name = "fastpi-with-django-orm"
version = "0.1.0"
description = "A PoC of using FastAPI alongside Django's ORM"
authors = ["firminoneto11 <firminoneto11@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.*"
django = "4.2.*"
fastapi = "0.104.*"
environs = "9.5.*"
uvicorn = "0.23.*"
uvloop = "0.19.*"
httptools = "0.6.*"
httpx = "0.25.*"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.3"
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-env = "^1.1.1"
pytest-django = "^4.7.0"
pytest-sugar = "^0.9.7"
coverage = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
extend-select = ["E501"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "conf.settings"
addopts = "-s -v --no-migrations --durations=5"
markers = ["unit", "integration", "e2e"]
asyncio_mode = "auto"

[tool.pytest_env]
ENVIRONMENT = "test"

[tool.coverage.run]
omit = ["*test*", "manage.py", "*conftest.py"]
data_file = ".coverage/coverage"
branch = true

[tool.coverage.report]
skip_covered = true
precision = 2
fail_under = 80
exclude_also = ["if TYPE_CHECKING:"]

[tool.coverage.html]
directory = ".coverage/html-report"
skip_covered = true
